syntax = "proto3";

option go_package = "../pb";

package alefbookstores.readers;


service AlefBookstoresReadersService {
  rpc Register(RegistrationRequest) returns (User);
  rpc Login(LoginRequest) returns (User);
  rpc UpdateReader() returns (User);
  rpc DeleteReader() returns (User);
}

message User {

}

message RegistrationRequest {
  string user_id = 1;
  string email = 2;
  string password = 3;
  string firstName = 4;
  string lastName = 5;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}